# binja_covex

./: .gitignore  CMakeLists.txt  README.md
cmake/: BinjaQt.cmake
resources/: covex_icons.qrc
scripts/: configure_mac.py
src/covex/core/: block_filter.cpp  block_filter.hpp  coverage_discovery.cpp  coverage_discovery.hpp  coverage_index.hpp  coverage_mapper.cpp  coverage_mapper.hpp  logging.hpp  module_matcher.cpp  module_matcher.hpp
src/covex/coverage/: addr_trace_reader.cpp  addr_trace_reader.hpp  coverage_dataset.cpp  coverage_dataset.hpp  coverage_expression.cpp  coverage_expression.hpp  coverage_operations.cpp  coverage_operations.hpp  coverage_parser.cpp  coverage_parser.hpp  coverage_store.cpp  coverage_store.hpp  coverage_types.hpp  drcov_reader.cpp  drcov_reader.hpp
src/covex/ui/controllers/: workspace_controller.cpp  workspace_controller.hpp
src/covex/ui/models/: block_table_model.cpp  block_table_model.hpp  trace_table_model.cpp  trace_table_model.hpp
src/covex/ui/painting/: coverage_painter.cpp  coverage_painter.hpp
src/covex/ui/plugin/: ui_plugin.cpp
src/covex/ui/settings/: covex_settings.cpp  covex_settings.hpp
src/covex/ui/theme/: icon_loader.cpp  icon_loader.hpp
src/covex/ui/widgets/: sidebar_widget.cpp  sidebar_widget.hpp
